fixed alignment issue with date

--- a/themes/serialized/assets/css/theme.css
+++ b/themes/serialized/assets/css/theme.css
@@ -29,6 +29,8 @@ body {
 
 h1 > small {
     font-size: 70%;
+    float: right;
+    padding-top: 15px;
 }
 
 .navbar {
